--- a/views/includes/homepage/thumbnail.ejs
+++ b/views/includes/homepage/thumbnail.ejs
@@ -1,7 +1,7 @@
 <div class="zoom_effect_1">
     <div class="upper_1 bg_secondary text-white">
-        <%- status===1 ? 'Vanzare' : 'Inchiriere' %>
+        <%- status === 1 ? 'Vanzare' : 'Inchiriere' %>
     </div>
-    <a href="/<%- status == 1 ? 'vanzare' : 'inchiriere' %>/<%- id %>"><img
+    <a href="<%- propertyUrl %>"><img
             src="<%- thumbnail %>" alt="imagine"></a>
 </div>
