--- a/views/includes/homepage/title.ejs
+++ b/views/includes/homepage/title.ejs
@@ -1,4 +1,4 @@
-<h5 class="title"><a href="/<%- status == 1 ? 'vanzare' : 'inchiriere' %>/<%- id %>">
+<h5 class="title"><a href="<%- propertyUrl%>">
         <%- title %>
     </a>
 </h5>
