chore: Ejs changes

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -27,7 +27,7 @@
                     <ul>
                         <li> <i class="fas fa-map-marker-alt"></i>
                             <h6 class="text_white mb-2">Adresa biroului</h6>
-                            <span>Piața Alba Iulia</span>
+                            <span>Maria Rosetti 8</span>
                         </li>
                         <li> <i class="fa fa-phone" aria-hidden="true"></i>
                             <h6 class="text_white mb-2">Sună-ne</h6>
@@ -53,6 +53,7 @@
                     </ul>
                 </div>
             </div>
+            <a href="https://www.imobiliare.ro?utm_source=insigne_site_agentie&utm_campaign=site_agentie&utm_medium=insigne" target="_blank" title="Expert in imobiliare" ><img src="https://adminonline.imobiliare.ro/css/imagini/widgets/expert_alb.png" srcset="https://adminonline.imobiliare.ro/css/imagini/widgets/expert_alb.png 1x, https://adminonline.imobiliare.ro/css/imagini/widgets/expert_alb_2x.png 2x" width="264" height="51" border="0" alt="Expert in imobiliare" /></a>
         </div>
     </div>
 </section>
