--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -40,7 +40,7 @@
         </header>
         
         <!-- Banner Section Start -->
-        <%- include('../includes/banner_section.ejs', {pageTitle: pageTitle, imageUrl:imageUrl}) %>
+        <%- include('../includes/banner_section.ejs', {pageTitle: pageTitle}) %>
         <!-- Banner Section End --> 
         
         <!-- Error Section Start -->
