--- a/views/pages/properties.ejs
+++ b/views/pages/properties.ejs
@@ -16,149 +16,13 @@
 
             <!-- Banner Section Start -->
             <!-- TODO ADD THIS TO INCLUDES -->
-            <%- include('../includes/banner_section.ejs', {pageTitle: pageTitle, imageUrl:imageUrl}) %>
+            <%- include('../includes/banner_section.ejs', {pageTitle: pageTitle}) %>
             <!-- Banner Section End -->
             
             <!-- Property List Start -->
             <section class="full_row py_80 bg_gray">
                 <div class="container" id="listings-page">
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="property_sidebar">
-                                <div class="property_form sidebar-widget">
-                                    <form class="price-filter" id="filter_form">
-
-                                        <div class="row">
-                                            <div class="col-lg-12 col-sm-8">
-                                                <p>Căutat după:</p>
-                                            </div>
-                                            <div class="col-lg-12 col-sm-8">
-                                                <input id="search_input" value="<%-searchInput%>" name="searchInput"
-                                                    class="form-control mb-4" type="text"
-                                                    placeholder="Caută o adresă, Ex: Dristor">
-                                            </div>
-                                            <div class="col-lg-12">
-                                                <h4 class="widget-title mb-4">Preț</h4>
-                                            </div>
-                                            <div class="col-lg-12">
-                                                <div class="price_range mb-5">
-                                                    <!-- <div class="price-filter"> <span class="price-slider">
-                                                            <input class="filter_price" type="text" name="price"
-                                                                value="0;" />
-                                                        </span> </div> -->
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-12">
-                                                <h4 class="widget-title mb-4">Suprafață</h4>
-                                            </div>
-                                            <div class="col-lg-12">
-                                                <div class="area_range mb-5">
-                                                    <div class="area-filter">
-                                                        <span class="area-slider">
-                                                            <input class="area_filter" type="text" name="area"
-                                                                value="0;10000" />
-                                                        </span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-12">
-                                                <h4 class="widget-title mb-4">Filtre</h4>
-                                            </div>
-                                            <!-- TODO dynamically create those fields -->
-                                            <div class="col-lg-12 col-md-6">
-                                                <div class="form-group">
-                                                    <select class="selectpicker form-control" name="property_status">
-                                                        <option selected disabled>Locuinte Mobilate</option>
-                                                        <option value="0">Nu</option>
-                                                        <option value="1">Da</option>
-                                                        <option value="-1">Oricare</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-12 col-md-6">
-                                                <div class="form-group">
-                                                    <%- include('../includes/property_types_dropdown.ejs') %>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-12">
-                                                <h4 class="widget-title mb-4">Etaj</h4>
-                                            </div>
-                                            <div class="col-lg-12">
-                                                <div class="price_range mb-5">
-                                                    <div class="etaj-filter"> <span class="etaj-slider">
-                                                            <input class="etaj_filter" type="text" name="etaj"
-                                                                value="0;" />
-                                                        </span> </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6 col-md-6">
-                                                <div class="form-group">
-                                                    <select class="selectpicker form-control" name="camere">
-                                                        <option selected disabled>Nr Camere</option>
-                                                        <option>1</option>
-                                                        <option>2</option>
-                                                        <option>3</option>
-                                                        <option value="4">4+</option>
-                                                        <option value="-1">Oricate</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6 col-md-6">
-                                                <div class="form-group">
-                                                    <select class="selectpicker form-control" name="bai">
-                                                        <option selected disabled>Nr băi</option>
-                                                        <option>1</option>
-                                                        <option>2</option>
-                                                        <option value="3">3+</option>
-                                                        <option value="-1">Oricate</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-12">
-                                                <button name="search" class="btn btn_primary w-100"
-                                                    type="submit">caută</button>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-
-                            </div>
-                        </div>
-                        <div class="col-lg-8">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="property_sorting mb_30 d-inline-block w-100 mt_md_50">
-                                        <form class="property_filter" id="sort_form">
-                                            <div class="col-lg-6 col-md-6">
-                                                <p class="properties_result">
-                                                    <span class="p_count"></span>
-                                                </p>
-                                            </div>
-                                            <ul class="float-right">
-                                                <li> <span>Order:</span>
-                                                    <select class="selectpicker form-control" data-width="fit"
-                                                        name="sort_order">
-                                                        <option selected disabled>Default Order</option>
-                                                        <option value="pret;-1">Preț (desc)</option>
-                                                        <option value="pret;1">Preț (cres)</option>
-                                                        <option value="suprafata;1">Suprafață (cresc)</option>
-                                                        <option value="suprafata;-1">Suprafață (desc)</option>
-                                                        <option value="createdAt;-1">Data publicării (desc)</option>
-                                                    </select>
-                                                </li>
-                                            </ul>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Property List Start -->
-                            <div class="row" id="properties-row">
-                                
-                            </div>
-                            <!-- End Property list -->
-                            <%- include('../includes/pagination.ejs') %>
-                        </div>
-                    </div>
+                    
                 </div>
             </section>
             <!-- Property List End -->
