feat: First steps of authentication
comment: Use of jwt for authentication

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -46,22 +46,17 @@
                               <li class="nav-item"> <a
                                               class="nav-link <%= path === '/contact' ? 'active' : '' %>"
                                               href="/contact">Contact</a></li>
-                              <% if (isAuthenticated) { %>
                                       <li class="nav-item"> <a class="nav-link" href="#"
                                               id="basic_logout">Delogare</a></li>
-                              <%} else {%>
                                       <li class="nav-item"> <a
                                               class="nav-link <%= path === '/signup' ? 'active' : '' %>"
-                                              href="/signup">Creează cont</a></li>
+                                              href="/creare-cont">Creează cont</a></li>
                               <li class="nav-item"> <a
                                               class="nav-link <%= path === '/login' ? 'active' : '' %>"
-                                              href="/login">Intră in cont</a></li>
-                              <% } %>
-                                            
-
+                                              href="/autentificare">Intră in cont</a></li>
                                           </ul>
                                           <div class="submit_property ml-2"><a class="btn btn_primary_bg"
-                                            href="/submit_property">Adauga proprietate</a></div>
+                                            href="/adauga-proprietate">Adauga proprietate</a></div>
                                         </div>
                                       </nav>
                         </div>
