--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -1,31 +1,26 @@
-<%- include('../includes/header.ejs') %>
+<%- include('../../includes/header.ejs') %>
 <link rel="stylesheet" href="/css/auth.css">
 </head>
 
 <body class="page-load">
-    <%- include('../includes/preload.ejs') %>
+    <%- include('../../includes/preload.ejs') %>
 
     <!-- Wrapper Start -->
     <div id="page_wrapper" class="container-fluid">
         <div class="row">
             <header id="header" class="w-100 bg_white nav-on-top">
                 <!-- Nav Header Start -->
-                <%- include('../includes/navbar.ejs') %>
+                <%- include('../../includes/navbar.ejs') %>
                 <!-- Nav Header End -->
             </header>
 
             <!-- Banner Section Start -->
             <!-- TODO ADD THIS TO INCLUDES -->
-            <%- include('../includes/banner_section.ejs', {pageTitle: pageTitle, imageUrl:imageUrl}) %>
+            <%- include('../../includes/banner_section.ejs', {pageTitle: pageTitle}) %>
             <!-- Banner Section End -->
 
             <!-- Sign In Account Start -->
             <section class="full_row py_100 bg_gray">
-                <%if(errorMessage) {%>
-                <div class="centered">
-                    <%= errorMessage %>
-                </div>
-                <% } %>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -38,36 +33,35 @@
 
                                         <div class="form-group">
                                             <input type="text" class="form-control" name="first_name" placeholder="Nume"
-                                                value="<%= oldInput.firstName %>">
+                                                value="">
                                         </div>
                                         <div class="form-group">
                                             <input type="text" class="form-control" name="last_name"
-                                                placeholder="Prenume" value="<%= oldInput.lastName %>">
+                                                placeholder="Prenume" value="">
                                         </div>
                                         <div class="form-group">
                                             <input type="email"
-                                                class="form-control <%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>"
-                                                name="email" placeholder="Adresa Email" value="<%= oldInput.email %>">
+                                                class="form-control"
+                                                name="email" placeholder="Adresa Email" value="">
                                         </div>
                                         <div class="form-group">
                                             <input type="text"
-                                                class="form-control <%= validationErrors.find(e => e.param === 'phoneNumber') ? 'invalid' : '' %>"
+                                                class="form-control"
                                                 name="phhoneNumber" placeholder="Numar telefon"
-                                                value="<%= oldInput.phoneNumber %>">
+                                                value="">
                                         </div>
                                         <div class="form-group">
                                             <input type="password"
-                                                class="form-control <%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"
-                                                name="password" placeholder="Parolă" value="<%= oldInput.password %>">
+                                                class="form-control"
+                                                name="password" placeholder="Parolă" value="">
                                         </div>
                                         <div class="form-group">
                                             <input type="password"
-                                                class="form-control <%= validationErrors.find(e => e.param === 'confirmPassword') ? 'invalid' : '' %>"
+                                                class="form-control"
                                                 name="confirmPassword" placeholder="Confirmă Parola"
-                                                value="<%= oldInput.confirmPassword %>">
+                                                value="">
                                         </div>
-                                        <button type="submit" class="btn btn_primary_bg">Sign
-                                            Up</button>
+                                        <button type="submit" class="btn btn_primary_bg">Sign Up</button>
                                     </form>
                                 </div>
                                 <div class="footer">Click and read our terms and condition<a href="#">Termeni și condiții</a></div>
@@ -80,7 +74,7 @@
             <!-- Sign In Account End -->
 
             <!-- Footer Section Start -->
-            <%- include('../includes/footer.ejs') %>
+            <%- include('../../includes/footer.ejs') %>
             <!-- Footer Section End -->
 
             <!-- Find Part Satrt -->
@@ -88,9 +82,9 @@
             <!-- Find Part Satrt -->
         </div>
     </div>
+    <script src="/js/auth/main.js"></script>
     <!-- Wrapper End -->
-    <%- include('../includes/scripts.ejs') %>
-    </script>
+    <%- include('../../includes/scripts.ejs') %>
 </body>
 
 </html>
