--- a/views/pages/submit_property.ejs
+++ b/views/pages/submit_property.ejs
@@ -12,7 +12,7 @@
         </header>
         
         <!-- Banner Section Start -->
-        <%- include('../includes/banner_section.ejs', {pageTitle: pageTitle, imageUrl:imageUrl}) %>
+        <%- include('../includes/banner_section.ejs', {pageTitle: pageTitle}) %>
         <!-- Banner Section End --> 
         
         <!-- Submit Property Start -->
