--- a/views/pages/auth/login.ejs
+++ b/views/pages/auth/login.ejs
@@ -1,80 +1,79 @@
 <%- include('../../includes/header.ejs') %>
-<link rel="stylesheet" href="/css/auth.css">
-</head>
+    <link rel="stylesheet" href="/css/auth.css">
+    </head>
 
-<body class="page-load">
-    <!-- Wrapper Start -->
-    <div id="page_wrapper" class="container-fluid">
-        <div class="row">
-            <header id="header" class="w-100 bg_white nav-on-top">
-                <!-- Nav Header Start -->
-                <%- include('../../includes/navbar.ejs') %>
-                <!-- Nav Header End -->
-            </header>
+    <body class="page-load">
+        <!-- Wrapper Start -->
+        <div id="page_wrapper" class="container-fluid">
+            <div class="row">
+                <header id="header" class="w-100 bg_white nav-on-top">
+                    <!-- Nav Header Start -->
+                    <%- include('../../includes/navbar.ejs') %>
+                        <!-- Nav Header End -->
+                </header>
 
-            <!-- Banner Section Start -->
-            <!-- TODO ADD THIS TO INCLUDES -->
-            <%- include('../../includes/banner_section.ejs', {pageTitle: pageTitle}) %>
-            <!-- Banner Section End -->
+                <!-- Banner Section Start -->
+                <!-- TODO ADD THIS TO INCLUDES -->
+                <%- include('../../includes/banner_section.ejs', {pageTitle: pageTitle}) %>
+                    <!-- Banner Section End -->
 
-            <!-- Sign In Account Start -->
-            <section class="full_row py_100 bg_gray" id="loginApp">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class=" bg_white sign_in_up" role="document">
-                                <div class="header bg_primary">
-                                    <h4 class="inner-title text_white">Logheaza-te</h4>
-                                </div>
-                                <p v-if="errors.length">
-                                    <b>Completeaza urmatoarele:</b>
-                                    <ul>
-                                      <li v-for="error in errors">{{ error }}</li>
-                                    </ul>
-                                </p>
-                                <div class="body">
-                                    <p>Log in</p>
-                                    <form id="loginForm" action="/login" method="POST" novalidate @submit="checkForm">
-                                        <div class="form-group">
-                                            <input v-model="email" name="email" type="email"
-                                                class="form-control"
-                                                placeholder="Email Address" value="">
+                    <!-- Sign In Account Start -->
+                    <section class="full_row py_100 bg_gray" id="loginApp">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class=" bg_white sign_in_up" role="document">
+                                        <div class="header bg_primary">
+                                            <h4 class="inner-title text_white">Logheaza-te</h4>
                                         </div>
-                                        <div class="form-group">
-                                            <input v-model="password" name="password" type="password"
-                                                class="form-control"
-                                                placeholder="Parolă" value="">
+                                        <div class="body">
+                                            <p>Log in</p>
+                                            <p v-if="errors.length" class="px-5">
+                                            <ul class="text-danger">
+                                                <li v-for="error in errors">{{ error }}</li>
+                                            </ul>
+                                            </p>
+                                            <form id="loginForm" action="/login" method="POST" novalidate
+                                                @submit="formSubmit">
+                                                <div class="form-group">
+                                                    <input v-model="email" name="email" type="email"
+                                                        class="form-control" placeholder="Email Address" value="">
+                                                </div>
+                                                <div class="form-group">
+                                                    <input v-model="password" name="password" type="password"
+                                                        class="form-control" placeholder="Parolă" value="">
+                                                </div>
+                                                <div class="form-group">
+                                                    <button type="submit" name="signin" class="btn btn_primary_bg">Intră
+                                                        in
+                                                        cont</button>
+                                                </div>
+                                            </form>
+                                            <div class="password_recovery">Recuperare Parolă <a href="#">Apasa aici</a>
+                                            </div>
                                         </div>
-                                        <div class="form-group">
-                                            <button type="submit" name="signin" class="btn btn_primary_bg">Intră in
-                                                cont</button>
-                                        </div>
-                                    </form>
-                                    <div class="password_recovery">Recuperare Parolă <a href="#">Apasa aici</a>
+                                        <div class="footer">Click and read our terms and condition<a href="#">Terms and
+                                                Condition</a></div>
                                     </div>
                                 </div>
-                                <div class="footer">Click and read our terms and condition<a href="#">Terms and
-                                        Condition</a></div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <!-- Modal -->
-            </section>
-            <!-- Sign In Account End -->
+                        <!-- Modal -->
+                    </section>
+                    <!-- Sign In Account End -->
 
-            <!-- Footer Section Start -->
-            <%- include('../../includes/footer.ejs') %>
-            <!-- Footer Section End -->
+                    <!-- Footer Section Start -->
+                    <%- include('../../includes/footer.ejs') %>
+                        <!-- Footer Section End -->
 
-            <!-- Find Part Satrt -->
-            <a href="#" id="scroll"><i class="fas fa-arrow-up"></i></a>
-            <!-- Find Part Satrt -->
+                        <!-- Find Part Satrt -->
+                        <a href="#" id="scroll"><i class="fas fa-arrow-up"></i></a>
+                        <!-- Find Part Satrt -->
+            </div>
         </div>
-    </div>
-    <script src="/js/auth/main.js"></script>
-    <!-- Wrapper End -->
-    <%- include('../../includes/scripts.ejs') %>
-</body>
+        <script src="/js/auth/main.js"></script>
+        <!-- Wrapper End -->
+        <%- include('../../includes/scripts.ejs') %>
+    </body>
 
-</html>
+    </html>
