--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -1,90 +1,86 @@
 <%- include('../../includes/header.ejs') %>
-<link rel="stylesheet" href="/css/auth.css">
-</head>
+    <link rel="stylesheet" href="/css/auth.css">
+    </head>
 
-<body class="page-load">
-    <%- include('../../includes/preload.ejs') %>
+    <body class="page-load">
+        <%- include('../../includes/preload.ejs') %>
 
-    <!-- Wrapper Start -->
-    <div id="page_wrapper" class="container-fluid">
-        <div class="row">
-            <header id="header" class="w-100 bg_white nav-on-top">
-                <!-- Nav Header Start -->
-                <%- include('../../includes/navbar.ejs') %>
-                <!-- Nav Header End -->
-            </header>
+            <!-- Wrapper Start -->
+            <div id="page_wrapper" class="container-fluid">
+                <div class="row">
+                    <header id="header" class="w-100 bg_white nav-on-top">
+                        <!-- Nav Header Start -->
+                        <%- include('../../includes/navbar.ejs') %>
+                            <!-- Nav Header End -->
+                    </header>
 
-            <!-- Banner Section Start -->
-            <!-- TODO ADD THIS TO INCLUDES -->
-            <%- include('../../includes/banner_section.ejs', {pageTitle: pageTitle}) %>
-            <!-- Banner Section End -->
+                    <!-- Banner Section Start -->
+                    <!-- TODO ADD THIS TO INCLUDES -->
+                    <%- include('../../includes/banner_section.ejs', {pageTitle: pageTitle}) %>
+                        <!-- Banner Section End -->
 
-            <!-- Sign In Account Start -->
-            <section class="full_row py_100 bg_gray">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class=" bg_white sign_in_up" role="document">
-                                <div class="header bg_primary">
-                                    <h4 class="inner-title text_white">Creează cont</h4>
+                        <!-- Sign In Account Start -->
+                        <section class="full_row py_100 bg_gray" id="signUpApp">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class=" bg_white sign_in_up" role="document">
+                                            <div class="header bg_primary">
+                                                <h4 class="inner-title text_white">Creează cont</h4>
+                                            </div>
+                                            <ul v-if="errors.length" class="text-danger px-5">
+                                                <li v-for="error in errors">{{ error }}</li>
+                                            </ul>
+                                            <div class="body">
+                                                <form class="registation" action="/signup" method="POST" id="signUpForm"
+                                                    @submit="formSubmit">
+
+                                                    <div class="form-group">
+                                                        <input v-model="name" type="text" class="form-control"
+                                                            name="first_name" placeholder="Nume" value="">
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <input v-model="email" type="email" class="form-control"
+                                                            name="email" placeholder="Adresa Email" value="">
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <input v-model="phoneNumber" type="text" class="form-control"
+                                                            name="phoneNumber" placeholder="Numar telefon" value="">
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <input v-model="password" type="password" class="form-control"
+                                                            name="password" placeholder="Parolă" value="">
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <input v-model="confirmPassword" type="password"
+                                                            class="form-control" name="confirmPassword"
+                                                            placeholder="Confirmă Parola" value="">
+                                                    </div>
+                                                    <button type="submit"
+                                                        class="btn btn_primary_bg">Inregistrare</button>
+                                                </form>
+                                            </div>
+                                            <div class="footer"><a href="#">Termeni și condiții</a></div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="body">
-                                    <form class="registation" action="/signup" method="POST">
-
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" name="first_name" placeholder="Nume"
-                                                value="">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" name="last_name"
-                                                placeholder="Prenume" value="">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="email"
-                                                class="form-control"
-                                                name="email" placeholder="Adresa Email" value="">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="text"
-                                                class="form-control"
-                                                name="phhoneNumber" placeholder="Numar telefon"
-                                                value="">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="password"
-                                                class="form-control"
-                                                name="password" placeholder="Parolă" value="">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="password"
-                                                class="form-control"
-                                                name="confirmPassword" placeholder="Confirmă Parola"
-                                                value="">
-                                        </div>
-                                        <button type="submit" class="btn btn_primary_bg">Sign Up</button>
-                                    </form>
-                                </div>
-                                <div class="footer">Click and read our terms and condition<a href="#">Termeni și condiții</a></div>
                             </div>
-                        </div>
-                    </div>
+                            <!-- Modal -->
+                        </section>
+                        <!-- Sign In Account End -->
+
+                        <!-- Footer Section Start -->
+                        <%- include('../../includes/footer.ejs') %>
+                            <!-- Footer Section End -->
+
+                            <!-- Find Part Satrt -->
+                            <a href="#" id="scroll"><i class="fas fa-arrow-up"></i></a>
+                            <!-- Find Part Satrt -->
                 </div>
-                <!-- Modal -->
-            </section>
-            <!-- Sign In Account End -->
+            </div>
+            <script src="/js/auth/main.js"></script>
+            <!-- Wrapper End -->
+            <%- include('../../includes/scripts.ejs') %>
+    </body>
 
-            <!-- Footer Section Start -->
-            <%- include('../../includes/footer.ejs') %>
-            <!-- Footer Section End -->
-
-            <!-- Find Part Satrt -->
-            <a href="#" id="scroll"><i class="fas fa-arrow-up"></i></a>
-            <!-- Find Part Satrt -->
-        </div>
-    </div>
-    <script src="/js/auth/main.js"></script>
-    <!-- Wrapper End -->
-    <%- include('../../includes/scripts.ejs') %>
-</body>
-
-</html>
+    </html>
